--- a/cssexperimenting/layouts.html
+++ b/cssexperimenting/layouts.html
@@ -48,17 +48,18 @@
 			padding: 25px 0 0 0;
 			font-family: Aldrich;
 		}
-		ul.nav {
+		#nav {
 			margin: 0;
 			padding: 5px 0;
 			//border: solid 1px black;
 		}
-		ul.nav li {
+		#nav li {
 			list-style: none;
 			padding: 0;
 			margin: 0;
+			//border: solid 1px white;
 		}
-		ul.nav li a {
+		#nav li a {
 			//border: solid 1px white;
 			color: white;
 			text-decoration: none;
@@ -66,11 +67,7 @@
 			margin: 0;
 			font-size: 1.6em;
 		}
-		<!-- ul.nav li:hover { -->
-			<!-- color: black; -->
-			<!-- //border: solid 1px white; -->
-		<!-- } -->
-		ul.nav li a:hover {
+		#nav li a:hover {
 			color: black;
 			font-size: 1.6em;
 		}
@@ -99,13 +96,13 @@
 			<!-- TOP CLASS ENDS -->
 			<div class="wrapper">
 				<div class="side">
-					<ul class="nav">
-						<btn id="addFolder">Add Folder</btn>
+					<ul id="nav">
+						<btn id="addFolder" onclick="addNewFolder ()">Add Folder</btn>
 						<btn id="addFile">Add File</btn>
-						<li><a href="#" class="ion-android-add-circle"></a> Drop Item #1</li>
-						<li><a href="#" class="ion-android-add-circle"></a> Drop Item #2</li>
-						<li><a href="#" class="ion-android-add-circle"></a> Drop Item #3</li>
-						<li><a href="#" class="ion-android-add-circle"></a> Drop Item #4</li>
+						<li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #1</li>
+						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #2</li> -->
+						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #3</li> -->
+						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #4</li> -->
 					</ul>
 				</div>
 				<!-- SIDE CLASS ENDS -->
@@ -123,8 +120,50 @@
 		<h3><a href="index.html">HOME</a></h3>
 		
 		<script>
-			var x = document.getElementsByClassName("ion-android-add-circle");
-			console.log(x);
+		
+		// WORK IN PROGRESS ... IGNORE UGLY CODE BELOW!
+		function addNewFolder(){
+
+			var y = document.getElementsByClassName("folder");
+			var link = document.getElementsByClassName("ion-android-add-circle");
+
+				<!-- console.log("Function Executed"); -->
+				<!-- console.log(x);				 -->
+				<!-- console.log(y[0]); -->
+				<!-- if (y.length > 0){ -->
+					for ( i=0; i <= y.length; i++ ){
+						if ( i == y.length ){
+							i++; // Adds 1 
+							
+							var ul = document.getElementById("nav");
+							var li = document.createElement("li");
+							link[i] = document.createElement("a");
+							li.setAttribute("class", "folder");
+							link[i].setAttribute("class", "ion-android-add-circle")
+							link[i].href="#";
+							li.appendChild(link[i]);
+							li.appendChild(document.createTextNode(" Drop Item #" + i));
+							ul.appendChild(li);
+							<!-- for ( a = 0; a <= link.length; a++ ){ -->
+								<!-- console.log(link[a]); -->
+							<!-- } -->
+}
+						else{
+							<!-- console.log("Inner Else Executed"); -->
+						}
+						<!-- console.log(y[i]); -->
+						<!-- console.log(i); -->
+					}
+				<!-- } -->
+				<!-- else { -->
+					<!-- console.log("Else Executed"); -->
+				<!-- } -->
+			}
+			
+			<!-- // Showing x Array -->
+		
+			
+			//x.innerHTML = '<li><a href="#" class="ion-android-add-circle"></a> Drop Item #5</li>';
 			
 		</script>
 	</body>
