--- a/cssexperimenting/layouts.html
+++ b/cssexperimenting/layouts.html
@@ -99,10 +99,10 @@
 					<ul id="nav">
 						<btn id="addFolder" onclick="addNewFolder ()">Add Folder</btn>
 						<btn id="addFile">Add File</btn>
-						<li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #1</li>
-						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #2</li> -->
-						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #3</li> -->
-						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Drop Item #4</li> -->
+						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Folder #1</li> -->
+						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Folder #2</li> -->
+						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Folder #3</li> -->
+						<!-- <li class="folder"><a href="#" class="ion-android-add-circle"></a> Folder #4</li> -->
 					</ul>
 				</div>
 				<!-- SIDE CLASS ENDS -->
@@ -142,7 +142,7 @@
 							link[i].setAttribute("class", "ion-android-add-circle")
 							link[i].href="#";
 							li.appendChild(link[i]);
-							li.appendChild(document.createTextNode(" Drop Item #" + i));
+							li.appendChild(document.createTextNode(" Folder #" + i));
 							ul.appendChild(li);
 							<!-- for ( a = 0; a <= link.length; a++ ){ -->
 								<!-- console.log(link[a]); -->
