--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 	
-		<title>My Webpage</title>
+		<title>Fused-Frog.com</title>
 		
 		<script src="jquery-3.2.0.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="main.css">
