--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	
 		<title>Fused-Frog.com</title>
 		
-		<script src="jquery-3.2.0.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<script src="scripts/jquery-3.2.0.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 		
 		<style>
 		
@@ -35,7 +35,7 @@
 			background-color: #BCD35F;
 			height: 100px;
 			width: 100%;
-			padding-left: 15px;s
+			padding-left: 19px;
 		
 		}
 		#bodyWrapper {
