--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
 			padding: 0;
 			
 		}
-		
-		#header {
-		
-			background-color: #DDD;
-			width: 100%;
-			height: 50px;
-			margin: 0 auto;
-			padding-left: 35px;
-		
-		}
-		
 		#banner {
 		
 			background-color: #BCD35F;
 			height: 100px;
 			width: 100%;
-			padding-left: 19px;
+			padding: 0 0 0 19px;
+			box-sizing: border-box;
+			margin: 0;
+			<!-- border: solid 1px blue; -->
+		
+		}
+		#nav-header {
+		
+			background-color: #DDD;
+			width: 100%;
+			height: 50px;
+			margin: 0 auto;
+			box-sizing: border-box;
+			padding-left: 35px;
 		
 		}
 		#bodyWrapper {
@@ -67,7 +69,6 @@
 			border-top-left-radius: 8px;
 		
 		}
-		
 		.topNav:hover {
 		
 			background-color: #BCD35F;
@@ -80,7 +81,6 @@
 			
 		
 		}
-		
 		#fuse-wrapper {
 		
 			display: flex;
@@ -89,7 +89,6 @@
 			background-color: #BCD35F;
 		
 		}
-		
 		#fuse-bg {
 		
 			background-image: url("images/fuse-bg.png");
@@ -104,30 +103,29 @@
 			clear: both;
 		
 		}
+
 		</style>
 	</head>
 
 	<body>
-		
-		<div id="banner">
-			<img src="images/fused-frog-logo.png">
-		</div>
-			<div id="fuse-wrapper">
-				<img src="images/fuse-small-t2.png">
-				<div id="fuse-bg"></div>
+			<div id="banner">
+				<img src="images/fused-frog-logo.png">
 			</div>
-		<div id="header">
-			<div class="topNav">Home</div>
-			<div class="topNav">Forum</div>
-			<div class="topNav">News</div>
-			<div class="topNav">About Us</div>	
-		</div>
-		<div id="bodyWrapper">
-			<div id="content">
-				Some content.
+				<div id="fuse-wrapper">
+					<img src="images/fuse-small-t2.png">
+					<div id="fuse-bg"></div>
+				</div>
+			<div id="nav-header">
+				<div class="topNav">Home</div>
+				<div class="topNav">Forum</div>
+				<div class="topNav">News</div>
+				<div class="topNav">About Us</div>	
 			</div>
-		</div>
-		
+			<div id="bodyWrapper">
+				<div id="content">
+					Some content.
+				</div>
+			</div>
 	</body>
 
 </html>
