--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 	<head>
 	
-		<title>Fused-Frog.com</title>
+		<title>About / Fused-Frog.com</title>
 		
 		<script src="scripts/jquery-3.2.0.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -14,7 +14,8 @@
 			
 			font-family: helvetica;
 			font-size: 110%;
-			color: blacks;
+			color: black;
+			background-color: #434343;
 			margin: 0;
 			padding: 0;
 			
@@ -31,12 +32,13 @@
 		}
 		#nav-header {
 		
-			background-color: #DDD;
+			background-color: #98B038;
 			width: 100%;
-			height: 50px;
+			height: 55px;
 			margin: 0 auto;
 			box-sizing: border-box;
 			padding-left: 35px;
+			padding-top: 2px;
 		
 		}#nav-header a{
 		
@@ -46,7 +48,7 @@
 		}
 		#bodyWrapper {
 		
-			background-color: #797;
+			background-color: #EDF9BE;
 			height: 1000px;
 			width: 100%;
 			padding: 10px 0 0 0;
@@ -54,6 +56,7 @@
 		}
 		#content {
 		
+			background-color: #A8A7A7;			
 			width: 75%;
 			margin: 0 auto;
 			padding: 10px;
@@ -107,18 +110,52 @@
 			clear: both;
 		
 		}
+		p {
 		
+			background-color: #DDD;
+			border: solid 1px #434;
+			border-top: solid 2px #434;
+			border-bottom-left-radius: 10px;
+			border-bottom-right-radius: 10px;
+			padding: 20px;
+			margin: 0;
+			font-size: 20px;
+			line-height: 140%;
+			text-indent: 15px;
+		
+		}
+		.headline {
+			
+			display: inline-block;
+			background-color: #DDD;
+			border: solid 1px #434;
+			border-bottom: none;
+			padding: 5px 8px;
+			margin: 20px 0 0 0;
+			border-top-right-radius: 10px;
+			border-top-left-radius: 10px;
+			bord
+		
+		}
+		#full-wrap{
+		
+			width: 1300px;
+			margin: 0 auto;
+			box-shadow: 12px 0 20px -5px rgba(0, 0, 0, 0.8), -12px 0 20px -5px rgba(0, 0, 0, 0.8);		
+		}
+
 		</style>
 	</head>
 
 	<body>
+		<div id="full-wrap">
 			<div id="banner">
 				<img src="images/fused-frog-logo.png">
 			</div>
-				<div id="fuse-wrapper">
-					<img src="images/fuse-small-t2.png">
-					<div id="fuse-bg"></div>
-				</div>
+			<div id="fuse-wrapper">
+				<img src="images/fuse-small-t2.png">
+				<div id="fuse-bg"></div>
+			</div>
 			<div id="nav-header">
 				<div class="topNav"><a href="index.html">Home</a></div>
 				<div class="topNav"><a href="forum.html">Forum</a></div>
@@ -128,9 +165,11 @@
 			</div>
 			<div id="bodyWrapper">
 				<div id="content">
-					Some content.
+					<h1 class="headline">About Us</h1>
+					<p>Fused-Frog.com is a Independant Game Developing company founded by avid gamers, for avid gamers.  Our goal is to produce a product that will provide an enjoyable experience while remaining engaged from fresh spawn to late game.</p>
 				</div>
 			</div>
+		</div>
 	</body>
 
 </html>
